<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item

        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item

        android:id="@+id/learnFragment"
        android:icon="@drawable/ic_learn"
        android:title="@string/learn" />

    <item

        android:id="@+id/gameFragment"
        android:icon="@drawable/ic_game"
        android:title="@string/game" />

    <item

        android:id="@+id/userFragment"
        android:icon="@drawable/ic_multiple_user"
        android:title="@string/users" />

    <item


        android:id="@+id/settingFragment"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting" />
</menu>